--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800;900&display=swap" rel="stylesheet" />
   <!-- Feather icons CDN -->
   <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
-  <script src="script.js" defer></script>
+  <!-- <script src="script.js" defer></script> -->
 
 </head>
 
